syntax = "proto3";

option csharp_namespace = "LightPhotos.Core.Protos";

package Protos;

message ImageFile {
	string id = 1;
	string name = 2;
	string fullName = 3;
}